# flightpred

./: CMakeLists.txt  LICENSE  README.md  my-release-key.keystore.gpg
android/flightpred/: AndroidManifest.xml
android/flightpred/res/layout/: main.xml  maptabview.xml
android/flightpred/res/values/: strings.xml
android/flightpred/src/ch/ulrichard/flightpred/: CircleOverlay.java  DataHandlerBase.java  JsonHandler.java  MapCircleOverlay.java  MapTabView.java  XmlHandler.java  sitetable.java
backup/: Emberger Alm.flightpred  contests.sql  flight_pred.sql  pred_ignore.sql  pred_sites.sql  weather_models.sql
backup/serialization_test/BAK_BIN/: linux32_gcc-4-3-2_boost-104200  linux64_gcc-4-4-5_boost-104200
backup/serialization_test/BAK_BIN_COMP/: linux32_gcc-4-3-2_boost-104200  linux64_gcc-4-4-5_boost-104200
backup/serialization_test/BAK_TEXT/: linux64_gcc-4-4-5_boost-104200
backup/serialization_test/BAK_TEXT_COMP/: linux32_gcc-4-4-5_boost-104200
cmake/: FindLIBBRAHE.cmake
debian/: changelog  control  copyright  flightpred.cron.d  postinst  postrm  prerm  rules  templates
doc/: index.html  random_thoughts.txt
flights/xcontest_org/: flights.sample.json
grib/: download_forecast_grib_file.sh  download_old_grib_files.sh  get-httpsubset.pl  get_gfs.pl
scripts/: CMakeLists.txt  append_wt_config.pl  build_debian_package.sh  compile_grib_api.sh  create_flightpred_db.sh  create_flightpred_db.sql  create_grib_api_deb.sh  create_json_spirit_deb.sh  create_wdb_deb.sh  db_backup.sh  db_restore.sh  feed.php  flightpred.conf  flightpred.homelinux.org  flightpred.local  flightpred.ulrichard.ch  flightpred_make_forecast.sh  forecast.php  get_problematic_days_weather.sh  install_required_deb_ubuntu.sh  interesting_queries.sql  reinstall_flightpred_deb.sh  update_flightpred_db.sql  wt_config.xml  wt_config_flightpred.xml  wt_config_merge.xml
src/: CMakeLists.txt  Doxyfile  common  cppcheck_suppress.txt  flightpred.workspace
src/common/: CMakeLists.txt  GenGeomLibSerialize.h  extract_features_flight.cpp  extract_features_flight.h  features_weather.cpp  features_weather.h  flightpred_globals.cpp  flightpred_globals.h  forecast.cpp  forecast.h  ga_evocosm.cpp  ga_evocosm.h  geo_parser.cpp  geo_parser.h  grab_flights.cpp  grab_flights.h  grab_grib.cpp  grab_grib.h  grib_pred_model.cpp  grib_pred_model.h  learning_machine.h  lm_svm_dlib.cpp  lm_svm_dlib.h  reporter.cpp  reporter.h  solution_config.cpp  solution_config.h  solution_manager.cpp  solution_manager.h  train_svm.cpp  train_svm.h
src/test/: CMakeLists.txt  flightpred_test.cbp  main.cpp  serialization_test.cpp
src/train/: CMakeLists.txt  area_mgr.cpp  area_mgr.h  extract_features_flight.cpp  extract_features_flight.h  features_weather.cpp  features_weather.h  flightpred_train.cbp  geo_parser.cpp  geo_parser.h  grab_flights.cpp  grab_flights.h  grab_grib.cpp  grab_grib.h  grib_pred_model.cpp  grib_pred_model.h  main.cpp  train_svm.cpp  train_svm.h
src/web/: CMakeLists.txt  FlightForecast.cpp  FlightForecast.h  Populations.cpp  Populations.h  WGoogleMapEx.cpp  WGoogleMapEx.h  WeatherMap.cpp  WeatherMap.h  flightpred_wt.cbp  main.cpp  main.h
www_docroot/: flightpred.css  robots.txt
www_docroot/googlemaps_addons/: BDCCArrow.js  BDCCCircle.js
www_docroot/resources/: rsh.js
